# zephyr-vscode-template

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  west.yml
boards/: nrf52840dk_nrf52840.overlay  nrf52840dk_nrf52840_debug.conf  thingy52_nrf52832.overlay  thingy52_nrf52832_debug.conf  thingy52_nrf52832_release.conf
cmake/: AddLibrary.cmake  BuildTargets.cmake  Tooling.cmake  build_options.cmake
cmake/tools/: Doxygen.cmake
conf/: debug.conf
docs/: Doxyfile.in
scripts/: init.sh
src/: main.c
src/app/: CMakeLists.txt  main.c  main.cpp
src/lib/: CMakeLists.txt
src/lib/testlibrary/: CMakeLists.txt  testlibrary.cpp  testlibrary.hpp
tools/: commitlint.config.js  package-lock.json  package.json
